<resources>
    <string name="app_name">Assured</string>
    <string name="welcome">Welcome</string>
    <string name="not_now"><u>Not now</u></string>
    <string name="sign_in_under_line"><u>Sign in</u></string>
    <string name="sign_in">Sign in</string>
    <string name="f_continue_with_facebook">f Continue with Facebook</string>
    <string name="g_continue_with_facebook">G Continue with Facebook</string>
    <string name="sign_up_with_email">Sign up with email</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="create_an_account">Create an account</string>
    <string name="repeat_password">Repeat password</string>
    <string name="welcome_back">Welcome back</string>
    <string name="find_plans">Find Plans</string>
    <string name="select_a_category">Select a category</string>
    <string name="info"><a href="#">Info</a></string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in_with_email">Sign in with email</string>
    <string name="cancel">cancel</string>
    <string name="visa">visa</string>
    <string name="_4444">****4444</string>
    <string name="connection_problem">Connection Problem</string>
    <string name="tap_to_refresh">Tap To Refresh</string>
    <string name="all">All</string>
    <string name="max_money">Max money</string>
    <string name="from">from</string>
    <string name="monthly_payment">Monthly payment</string>
    <string name="to">to</string>
    <string name="duration_month">Duration month</string>
    <string name="filter">Filter</string>
    <string name="reset">Reset</string>
    <string name="add_new_card">add new card</string>
    <string name="card_number">Card Number</string>
    <string name="mm">mm</string>
    <string name="dash">/</string>
    <string name="yy">yy</string>
    <string name="cvc">CVC</string>
    <string name="save">SAVE</string>
    <string name="compare_our_best_health_insurance_plans">Compare our Best Health Insurance Plans</string>
    <string name="confirm_all_your_details_before_you_buy">Confirm all your details before you buy</string>
    <string name="_10_000_cashless_hospitals">10,000+ Cashless hospitals</string>
    <string name="dapibus_pretium_scelerisque_explicabo_aliqua_accusantium">Dapibus! Pretium, scelerisque explicabo aliqua accusantium</string>
    <string name="claims_settled_in_20_mins">Claims Settled in 20 Mins</string>
    <string name="tempor_alias_aliquip_aspernatur_pretium_nostra_fringilla">Tempor alias. Aliquip aspernatur pretium, nostra, fringilla</string>
    <string name="free_preventive_check_ups">Free preventive check ups</string>
    <string name="higher_cover_at_low_premium">Higher cover at low premium</string>
    <string name="key_features">Key Features</string>
    <string name="_100_restored_benefit_get_100_of_your_cover_restored_instantly_after_your_first_claim">100% Restored Benefit: Get 100% of your cover restored instantly after your first claim.</string>
    <string name="_2x_multiplier_benefit_get_up_to_100_additional_policy_cover_as_no_claim_bonus">2X Multiplier Benefit: Get up to 100% additional policy cover as no claim bonus.</string>
    <string name="complete_coverage_60_days_prior_180_days_post_your_hospitalization">Complete coverage 60 days prior 180 days post your hospitalization.</string>
    <string name="change_email">change email</string>
    <string name="new_email">new email</string>
    <string name="change_password">change password</string>
    <string name="new_password">new password</string>
    <string name="your_message">Your message</string>
    <string name="checkout">Checkout</string>
    <string name="care_super_nbf_insurance_premiums">Care super NBF insurance premiums</string>
    <string name="_35_643">$35,643</string>
    <string name="members_1_adult">Members 1 adult</string>
    <string name="period">Period</string>
    <string name="_10_may_2021">10 May 2021</string>
    <string name="id_of_purchaser">ID of purchaser</string>
    <string name="sam">sam</string>
    <string name="premium">Premium</string>
    <string name="policy_details">Policy Details</string>
    <string name="policy_type">Policy Type</string>
    <string name="plan_features">Plan Features</string>
    <string name="payment_details">Payment Details</string>
    <string name="subtotal">Subtotal</string>
    <string name="total">Total</string>
    <string name="enter_your_id">Enter your ID</string>
    <string name="insure_now">Insure Now</string>
    <string name="review_amp_buy_policy"><![CDATA[Review & Buy Policy]]></string>
    <string name="price_total">Price Total</string>
    <string name="price_now">Price Now</string>
    <string name="access_your_account">Access Your Account</string>
    <string name="sign_in_or_register">Sign In or Register</string>
    <string name="full_amount">Full Amount</string>
    <string name="date">Date</string>
    <string name="policy_number">Policy number</string>
    <string name="payment_history">Payment History</string>
    <string name="have_any_question">Have any question?</string>
    <string name="lets_us_help_you">Lets us help you.</string>
    <string name="contact_to_insurance">Contact to insurance</string>
    <string name="help_buying_new_policy">Help buying new policy</string>
    <string name="health_plans">Health plans</string>
    <string name="be_ready_for_your_child_s_future_needs">Be ready for your child’s future needs</string>
    <string name="house_plans">House plans</string>
    <string name="now_you_can_insure_your_spouseas_well">Now you can insure your Spouseas well</string>
    <string name="cashless_health_insurance">Cashless health insurance</string>
    <string name="access_your_benefits_now">Access your benefits now</string>
    <string name="vehicle">vehicle</string>
    <string name="house">house</string>
    <string name="health">health</string>
    <string name="pet">pet</string>
    <string name="business_and_commercial_insurance_quote_forms">Business and Commercial Insurance Quote Forms</string>
    <string name="log_out">Log Out</string>
    <string name="no_policy_yet">No Policy yet?</string>
    <string name="sorry_you_don_t_have_any_policies">Sorry! You don\'t have any policies</string>
    <string name="find_new_plans">Find New Plans</string>
    <string name="change_your_information">Change your information</string>
    <string name="finish_checkout">Finish Checkout</string>
    <string name="total_annual_premium_insurance">Total annual premium insurance</string>
    <string name="policies">policies</string>
    <string name="house_insurance">House Insurance</string>
    <string name="health_insurance">Health Insurance</string>
    <string name="car_insurance">Car Insurance</string>
    <string name="pet_insurance">Pet Insurance</string>
    <string name="pro_health_protect">Pro Health Protect</string>
    <string name="term_insurance_calculator">Term Insurance Calculator</string>
    <string-array name="vehicle_types">
        <item>All</item>
        <item>Car</item>
        <item>Truck</item>
        <item>Moto</item>
    </string-array>
    <string-array name="pet">
        <item>All</item>
        <item>Cat</item>
        <item>Mouse</item>
    </string-array>
</resources>