<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_welcome_background"
    android:paddingHorizontal="30dp">

    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="34dp"
        android:layout_height="30dp"
        android:layout_marginTop="62dp"
        android:src="@drawable/ic_assured_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/logo_image" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/fb_login_button"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="187dp"
        android:background="@drawable/shape_button_background"
        android:backgroundTint="@color/blue"
        android:text="@string/f_continue_with_facebook"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/title_text" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/gmail_login_button"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="7dp"
        android:background="@drawable/shape_button_background"
        android:backgroundTint="@color/gmail_background"
        android:text="@string/g_continue_with_facebook"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/fb_login_button" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign_up_button"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="19dp"
        android:background="@drawable/shape_button_background"
        android:text="@string/sign_up_with_email"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/gmail_login_button" />

    <TextView
        android:id="@+id/question_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:gravity="center"
        android:text="@string/already_have_an_account"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@id/sign_in_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_up_button" />

    <TextView
        android:id="@+id/sign_in_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:gravity="center"
        android:text="@string/sign_in_under_line"
        android:textColor="@color/blue"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/question_text"
        app:layout_constraintTop_toBottomOf="@id/sign_up_button" />

    <TextView
        android:id="@+id/not_now_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:gravity="center"
        android:text="@string/not_now"
        android:textColor="@color/blue"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/question_text" />
</androidx.constraintlayout.widget.ConstraintLayout>