<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_authentication_background"
    android:paddingHorizontal="30dp">

    <ImageView
        android:id="@+id/back_image"
        android:layout_width="34dp"
        android:layout_height="30dp"
        android:layout_marginTop="62dp"
        android:src="@drawable/ic_back_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_text"
        android:layout_width="158dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/add_new_card"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back_image" />

    <EditText
        android:id="@+id/card_num_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/card_number"
        android:inputType="number"
        android:maxLength="16"
        android:padding="15dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_text" />

    <EditText
        android:id="@+id/mm_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/mm"
        android:inputType="number"
        android:maxLength="2"
        android:padding="15dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_num_editText" />

    <TextView
        android:id="@+id/row_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/dash"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@id/mm_editText"
        app:layout_constraintStart_toEndOf="@id/mm_editText"
        app:layout_constraintTop_toBottomOf="@id/card_num_editText"
        app:layout_constraintTop_toTopOf="@id/mm_editText" />

    <EditText
        android:id="@+id/yy_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/yy"
        android:inputType="number"
        android:maxLength="2"
        android:padding="15dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintStart_toEndOf="@id/row_text"
        app:layout_constraintTop_toBottomOf="@id/card_num_editText" />

    <EditText
        android:id="@+id/cvc_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/cvc"
        android:maxLength="3"
        android:inputType="number"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="@id/card_num_editText"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintTop_toBottomOf="@id/card_num_editText" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:paddingHorizontal="80dp"
        android:paddingVertical="20dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/shape_button_background"
        android:text="@string/save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mm_editText" />
</androidx.constraintlayout.widget.ConstraintLayout>