<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="400dp"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/max_money"
        android:textColor="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/max_money_from"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:drawableEnd="@drawable/ic_baseline_attach_money_24"
            android:hint="@string/from"
            android:inputType="numberDecimal"
            android:maxLength="8"
            android:textColorHint="#808080" />

        <EditText
            android:id="@+id/max_money_to"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:background="@color/white"
            android:drawableEnd="@drawable/ic_baseline_attach_money_24"
            android:hint="to"
            android:inputType="numberDecimal"
            android:maxLength="8"
            android:textColorHint="#808080" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:text="@string/monthly_payment"
        android:textColor="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/monthly_payment_from"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:drawableEnd="@drawable/ic_baseline_attach_money_24"
            android:hint="@string/from"
            android:inputType="numberDecimal"
            android:maxLength="8"
            android:textColorHint="#808080" />

        <EditText
            android:id="@+id/monthly_payment_to"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:background="@color/white"
            android:drawableEnd="@drawable/ic_baseline_attach_money_24"
            android:hint="@string/to"
            android:inputType="numberDecimal"
            android:maxLength="8"
            android:textColorHint="#808080" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:text="@string/duration_month"
        android:textColor="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/duration_from"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/from"
            android:inputType="number"
            android:maxLength="8"
            android:textColorHint="#808080" />

        <EditText
            android:id="@+id/duration_to"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:background="@color/white"
            android:hint="@string/to"
            android:inputType="number"
            android:maxLength="8"
            android:textColorHint="#808080" />
    </LinearLayout>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/white"
        android:padding="10dp" />

    <Button
        android:id="@+id/filter_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="150dp"
        android:layout_marginTop="50dp"
        android:text="@string/filter"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/reset_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="150dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#FF0000"
        android:text="@string/reset"
        android:textAllCaps="false" />
</LinearLayout>