<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_marginHorizontal="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/header_layout"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back_image"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="start"
            android:scaleType="centerInside"
            android:src="@drawable/ic_back_icon"
            app:tint="@color/selector_bottom_nav_bar" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:src="@drawable/ic_header_logo" />

        <View
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="end" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_text"
                android:layout_width="300dp"
                android:layout_marginTop="30dp"
                android:layout_height="wrap_content"
                android:text="@string/compare_our_best_health_insurance_plans"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/confirm_all_your_details_before_you_buy"
                android:textColor="@color/gray"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/shape_rectangle"
                android:padding="15dp">

                <ImageView
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:background="@drawable/shape_circle"
                    android:padding="15dp"
                    android:src="@drawable/ic_hospital_vector" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="7dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/_10_000_cashless_hospitals"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/dapibus_pretium_scelerisque_explicabo_aliqua_accusantium"
                        android:textColor="@color/gray"
                        android:textSize="12sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/shape_rectangle"
                android:padding="15dp">

                <ImageView
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:background="@drawable/shape_circle"
                    android:padding="15dp"
                    android:src="@drawable/ic_usd_vector" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="7dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/claims_settled_in_20_mins"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/tempor_alias_aliquip_aspernatur_pretium_nostra_fringilla"
                        android:textColor="@color/gray"
                        android:textSize="12sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/shape_rectangle"
                android:padding="15dp">

                <ImageView
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:background="@drawable/shape_circle"
                    android:padding="15dp"
                    android:src="@drawable/ic_bag_vector" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="7dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/free_preventive_check_ups"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/dapibus_pretium_scelerisque_explicabo_aliqua_accusantium"
                        android:textColor="@color/gray"
                        android:textSize="12sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/shape_rectangle"
                android:padding="15dp">

                <ImageView
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:background="@drawable/shape_circle"
                    android:padding="15dp"
                    android:src="@drawable/ic_pdf_vector" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="7dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/higher_cover_at_low_premium"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/tempor_alias_aliquip_aspernatur_pretium_nostra_fringilla"
                        android:textColor="@color/gray"
                        android:textSize="12sp" />
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/key_features"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <View
                android:layout_width="200dp"
                android:layout_height="3dp"
                android:layout_marginVertical="10dp"
                android:background="@color/blue" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_100_restored_benefit_get_100_of_your_cover_restored_instantly_after_your_first_claim"
                android:textColor="@color/gray"
                android:textSize="16sp" />

            <View
                android:layout_width="200dp"
                android:layout_height="3dp"
                android:layout_marginVertical="10dp"
                android:background="@color/blue" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_2x_multiplier_benefit_get_up_to_100_additional_policy_cover_as_no_claim_bonus"
                android:textColor="@color/gray"
                android:textSize="16sp" />

            <View
                android:layout_width="200dp"
                android:layout_height="3dp"
                android:layout_marginVertical="10dp"
                android:background="@color/blue" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/complete_coverage_60_days_prior_180_days_post_your_hospitalization"
                android:textColor="@color/gray"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="200dp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
